Search, Home and css for login and register

--- a/React-part/public/coursesDetails.css
+++ b/React-part/public/coursesDetails.css
@@ -5,7 +5,7 @@
 .courseDetails .information{
     display: flex;
     padding: 3%;
-    background: #beecff;
+    background: #aeddff;
     border-radius: 10px;
     margin-bottom: 2%;
 }
