adding error handling for server errors and protected route for login and register

--- a/React-part/public/style.css
+++ b/React-part/public/style.css
@@ -7,4 +7,5 @@
 @import "coursesDetails.css";
 @import "coursesSearch.css";
 @import "coursesCreate.css";
+@import "common.css";
 @import "footer.css";
