adding lecturers page

--- a/React-part/public/style.css
+++ b/React-part/public/style.css
@@ -7,5 +7,6 @@
 @import "coursesDetails.css";
 @import "coursesSearch.css";
 @import "coursesCreate.css";
+@import "lecturersList.css";
 @import "common.css";
 @import "footer.css";
